@@ -1212,7 +1212,7 @@ def supports_getitem(value: nodes.NodeNG, node: nodes.NodeNG) -> bool:
     if isinstance(value, nodes.ClassDef):
         if _supports_protocol_method(value, CLASS_GETITEM_METHOD):
             return True
-        if is_class_subscriptable_pep585_with_postponed_evaluation_enabled(value, node):
+        if subscriptable_with_postponed_evaluation_enabled(node):
             return True
     return _supports_protocol(value, _supports_getitem_protocol)
 
@@ -1401,6 +1401,13 @@ def is_class_subscriptable_pep585_with_postponed_evaluation_enabled(
         is_postponed_evaluation_enabled(node)
         and value.qname() in SUBSCRIPTABLE_CLASSES_PEP585
         and is_node_in_type_annotation_context(node)
+    )
+
+
+def subscriptable_with_postponed_evaluation_enabled(node: nodes.NodeNG) -> bool:
+    """Check if class can be subscriptable in type annotation context."""
+    return is_postponed_evaluation_enabled(node) and is_node_in_type_annotation_context(
+        node
     )
 
 
